force-app/main/default/objects/sbaa__ApprovalVariable__c/sbaa__ApprovalVariable__c.object-meta.xml
<CustomObject>
    <customHelpPage>sbaa__ApprovalVariableHelp</customHelpPage>
    <description>This is the Approval Variable associated with your Approval.</description>
    <label>Approval Variable</label>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>