force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__AggregateField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__AggregateField__c</fullName>
        <description>Field that&apos;s acted upon by the aggregate function.</description>
        <inlineHelpText>Field that&apos;s acted upon by the aggregate function.</inlineHelpText>
        <label>Aggregate Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>List_Total__c</fullName>
                </value>
                <value>
                    <fullName>Total Price</fullName>
                </value>
                <value>
                    <fullName>Subtotal</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Quantity__c</fullName>
                </value>
                <value>
                    <fullName>Approval_Discount__c</fullName>
                </value>
                <value>
                    <fullName>Business_Area__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__EffectiveQuantity__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>