force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__CombineWith__c.field-meta.xml
<CustomField>
        <fullName>sbaa__CombineWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Another approval variable to compose with this approval variable if your condition is based on both results.</description>
        <inlineHelpText>Another approval variable to compose with this approval variable if your condition is based on both results.</inlineHelpText>
        <label>Combine With</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Variables (Combine With)</relationshipLabel>
        <relationshipName>CombinedSummaryVariables</relationshipName>
        <type>Lookup</type>
    </CustomField>