force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__FilterField__c.field-meta.xml
<CustomField>
        <fullName>sbaa__FilterField__c</fullName>
        <description>Select the field to use when filtering items for inclusion in this approval variable.</description>
        <inlineHelpText>Select the field to use when filtering items for inclusion in this approval variable.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sbaa__TargetObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Product_Code__c</fullName>
                </value>
                <value>
                    <fullName>Business_Area__c</fullName>
                </value>
                <value>
                    <fullName>RPA_Threshold_Exceeded__c</fullName>
                </value>
                <value>
                    <fullName>ProdType__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>