force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>sbaa__FilterValue__c</fullName>
        <description>Enter the value to match in this filter.</description>
        <inlineHelpText>Enter the value to match in this filter.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>