force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__ListVariable__c.field-meta.xml
<CustomField>
        <fullName>sbaa__ListVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Variable responsible for calculating Total List</description>
        <inlineHelpText>Approval Variable responsible for calculating Total List</inlineHelpText>
        <label>List Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Variables (List Variable)</relationshipLabel>
        <relationshipName>ListSummaryVariables</relationshipName>
        <type>Lookup</type>
    </CustomField>