force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__NetVariable__c.field-meta.xml
<CustomField>
        <fullName>sbaa__NetVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval Variable responsible for calculating Total Net</description>
        <inlineHelpText>Approval Variable responsible for calculating Total Net</inlineHelpText>
        <label>Net Variable</label>
        <referenceTo>sbaa__ApprovalVariable__c</referenceTo>
        <relationshipLabel>Approval Variables (Net Variable)</relationshipLabel>
        <relationshipName>NetSummaryVariables</relationshipName>
        <type>Lookup</type>
    </CustomField>