force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__TargetObject__c.field-meta.xml
<CustomField>
        <fullName>sbaa__TargetObject__c</fullName>
        <description>Select the object you want to aggregate.</description>
        <inlineHelpText>Select the object you want to aggregate.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Product</fullName>
                </value>
                <value>
                    <fullName>SBQQ__QuoteLine__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>