force-app/main/default/objects/sbaa__ApprovalVariable__c/fields/sbaa__Type__c.field-meta.xml
<CustomField>
        <fullName>sbaa__Type__c</fullName>
        <description>When Discount is chosen, List Variable and Net Variable must be populated. When Summary is chosen, Aggregate Field and Aggregate Function must be populated.</description>
        <inlineHelpText>When Discount is chosen, List Variable and Net Variable must be populated. When Summary is chosen, Aggregate Field and Aggregate Function must be populated.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summary</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>