force-app/main/default/objects/sbaa__ApprovalVariable__c/validationRules/sbaa__Discount_Variable_Required_Fields.validationRule-meta.xml
<ValidationRule>
        <fullName>sbaa__Discount_Variable_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(sbaa__Type__c, &apos;Discount&apos;) &amp;&amp; (ISBLANK(sbaa__ListVariable__c) || ISBLANK(sbaa__NetVariable__c ))</errorConditionFormula>
        <errorMessage>Values for List Variable and Net Variable are required for Discount Variables</errorMessage>
    </ValidationRule>