force-app/main/default/objects/sbaa__ApprovalVariable__c/validationRules/sbaa__Summary_Variable_Required_Fields.validationRule-meta.xml
<ValidationRule>
        <fullName>sbaa__Summary_Variable_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(sbaa__Type__c, &apos;Summary&apos;) &amp;&amp; (ISPICKVAL( sbaa__AggregateField__c, &apos;&apos;) || ISPICKVAL(sbaa__AggregateFunction__c, &apos;&apos;))</errorConditionFormula>
        <errorMessage>Values for Aggregate Field and Aggregate Function are required for Summary Variables</errorMessage>
    </ValidationRule>