force-app/main/default/objects/sbaa__ApprovalVariable__c/listViews/sbaa__All.listView-meta.xml
<ListView>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>sbaa__Type__c</columns>
        <columns>sbaa__TargetObject__c</columns>
        <columns>sbaa__FilterField__c</columns>
        <columns>sbaa__Operator__c</columns>
        <columns>sbaa__FilterValue__c</columns>
        <columns>sbaa__AggregateField__c</columns>
        <columns>sbaa__AggregateFunction__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>